<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/c1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zagolovok"
            android:textColor="@color/c3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/c3"
            android:background="@drawable/rounded_edit_text"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op"
            android:textColor="@color/c3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/c3"
            android:background="@drawable/rounded_edit_text"
            android:layout_marginBottom="16dp"
            android:gravity="top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vid_sp"
            android:textColor="@color/c3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/sport_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sports_array"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/c3"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rasp"
            android:textColor="@color/c3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/c3"
            android:background="@drawable/rounded_edit_text"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mk"
            android:textColor="@color/c3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/max_participants_edit_text"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/c3"
            android:background="@drawable/rounded_edit_text"
            android:layout_marginBottom="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/save"
            android:textColor="@color/c1"
            android:textSize="32sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
    </LinearLayout>
</ScrollView>
